; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_parser.tab.c_get_array_or_ptr_ref.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_parser.tab.c_get_array_or_ptr_ref.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @get_array_or_ptr_ref to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_array_or_ptr_ref(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i64 @is_ptr(i32* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32*, i32** %3, align 8
  %9 = call i32* @type_pointer_get_ref(i32* %8)
  store i32* %9, i32** %2, align 8
  br label %19

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = call i64 @is_array(i32* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %10
  %15 = load i32*, i32** %3, align 8
  %16 = call i32* @type_array_get_element(i32* %15)
  store i32* %16, i32** %2, align 8
  br label %19

17:                                               ; preds = %10
  br label %18

18:                                               ; preds = %17
  store i32* null, i32** %2, align 8
  br label %19

19:                                               ; preds = %18, %14, %7
  %20 = load i32*, i32** %2, align 8
  ret i32* %20
}

declare dso_local i64 @is_ptr(i32*) #1

declare dso_local i32* @type_pointer_get_ref(i32*) #1

declare dso_local i64 @is_array(i32*) #1

declare dso_local i32* @type_array_get_element(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
